# TiNspireTextEditor

./: .gitmodules  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  ConnectionManager.tsx  FileControls.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  commands.rs  lib.rs  luna.rs  main.rs  models.rs  tests.rs  utils.rs  xml.rs
src/components/: Editor.css  Editor.tsx  ExportButton.css  ExportButton.tsx  Preview.css  Preview.tsx  Sidebar.css  Sidebar.tsx  Toolbar.css  Toolbar.tsx
src/hooks/: useExport.ts
