[package]
name = "ti-nspire-editor"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
# v2 uses external plugins for these capabilities:
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[features]
# Keep this for production builds
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
